fix styles add letter-spacing: 0;

--- a/src/components/view-validators/ui/bonded-validators/BondedValidatorsList.module.scss
+++ b/src/components/view-validators/ui/bonded-validators/BondedValidatorsList.module.scss
@@ -11,6 +11,9 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  & p {
+    letter-spacing: 0;
+  }
 }
 
 .moniker {
