--- a/src/components/view-validators/ui/unbonded-validators/UnbondedValidatorsList.module.scss
+++ b/src/components/view-validators/ui/unbonded-validators/UnbondedValidatorsList.module.scss
@@ -17,5 +17,6 @@
     padding: 20px 20px 20px 0;
     font-weight: 500;
     color: rgba(36, 121, 215, 0.68);
+    letter-spacing: 0;
   }
 }
